--- a/bib.bib
+++ b/bib.bib
@@ -136,8 +136,6 @@ author={A. Trouv\'{e}},
 pages={213-221},
 language={English}
 }
-=======
->>>>>>> ddcda686c7371148c93e601614754fd06e46d5a1
 
 @ARTICLE{Djurovic_aliasing_2012, 
 author={S. Djukanovi\'{c} and I. Djurovi\'{c}}, 
@@ -264,6 +262,32 @@ year=2001,
 month={Mar.}
 }
 
+@article{Dyer:1991:RPA:102782.102783,
+ author = {Dyer, M. and Frieze, A. and Kannan, R.},
+ title = {A Random Polynomial-time Algorithm for Approximating the Volume of Convex Bodies},
+ journal = {J. ACM},
+ volume = 38,
+ number = 1,
+ month = jan,
+ year = 1991,
+ pages = {1-17},
+ numpages = 17,
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {convex sets, random walks, sampling, volume},
+} 
+
+@inproceedings{Lovasz:2006:FAL:1170136.1170488,
+ author = {Lovasz, L. and Vempala, S.},
+ title = {Fast Algorithms for Logconcave Functions: Sampling, Rounding, Integration and Optimization},
+ booktitle = {Proceedings of the 47th Annual IEEE Symposium on Foundations of Computer Science},
+ series = {FOCS '06},
+ year = 2006,
+ pages = {57-68},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+} 
+
 @ARTICLE{Li_coloured_range_est_case, 
 author={Wenchao Li and Xuezhi Wang and Xinmin Wang and Moran, B.}, 
 journal={Electronics Letters}, 
@@ -350,6 +374,19 @@ doi = "http://dx.doi.org/10.1016/S0012-365X(99)00384-2",
 url = "http://www.sciencedirect.com/science/article/pii/S0012365X99003842",
 author = "M. Baake and R. V. Moody and P. A.B. Pleasants"
 }
+
+@ARTICLE{McKilliam_fast_sparse_period_est_2014, 
+author={McKilliam, R.G. and Clarkson, I. V.L. and Quinn, B.G.}, 
+journal=ieeespl, 
+title={Fast Sparse Period Estimation}, 
+year=2015, 
+month={Jan.}, 
+volume=22, 
+number=1, 
+pages={62-66}, 
+keywords={Chirp;Estimation;Fast Fourier transforms;Least squares approximations;Noise measurement;Quantization (signal);Fast Fourier Transform;period estimation}, 
+doi={10.1109/LSP.2014.2345737}, 
+ISSN={1070-9908},}
 
 @Article{sym4040566,
 AUTHOR = {Baake, M. and Grimm, U.},
@@ -744,7 +781,26 @@ pages={257-270},
 year=2012
 }
 
+@misc{asrp_multiacess_world_patent, 
+author = {A. Grant and D. Haley and R. G. McKilliam and W. G. Cowley and T. Chan}, 
+title = {Multi-Access Communication System}, 
+howpublished = {World patent WO2013AU01079},
+year=2013 
+}
 
+@misc{asrp_comm_sys_and_method_world_patent, 
+author = {D. Haley and J. Buetefuer and A. Grant and W. Cowley and G. Lechner and I. R. Land and R. G. McKilliam and A. Pollok and L. M. Davis and R. R. Luppino and A. Barbulescu}, 
+title = {Communication System and Method}, 
+howpublished = {World patent WO2013AU01078},
+year=2013 
+}
+
+@misc{asrp_channel_allocation_world_patent, 
+author = {A. Grant and D. Haley and D. Lawrie and R. G. McKilliam and W. Cowley and L. M. Davis}, 
+title = {Multi-Access Communication System}, 
+howpublished = {World patent WO2013AU00895},
+year=2013 
+}
 
 @misc{McKilliam_asrp_phase_2012, 
 author = {A. Grant and B. Cowley and D. Haley and A. Barbulescu and G. Lechner and I. Land and R. G. McKilliam and A. Pollok and L. Davis}, 
@@ -988,8 +1044,9 @@ ISSN={0018-9448},}
 
 @unpublished{McKilliam_closest_point_lattice_first_kind_2014, 
 author={R. G. McKilliam and A. Grant and I. V. L. Clarkson}, 
-note={under review {SIAM J. Discrete Math.}}, 
+note={accepted to {SIAM J. Discrete Math.}}, 
 title={Finding a closest point in a lattice of {Voronoi's} first kind}, 
+month={Jul.},
 year=2014,  
 }
 
@@ -6162,7 +6219,8 @@ number=8,
 pages={1962-1975}, 
 keywords={Lattices;Least squares approximations;Phase estimation;Polynomials;Signal processing algorithms;Signal to noise ratio;Asymptotic properties;nearest lattice point problem;phase unwrapping;polynomial phase signals}, 
 doi={10.1109/TSP.2014.2306178}, 
-ISSN={1053-587X},}
+ISSN={1053-587X}
+}
 
     
 @article{McKilliam_arxiv_pps_unwrapping_2012,
