--- a/robby.bib
+++ b/robby.bib
@@ -4,6 +4,8 @@
 
 @string{dasp = {Defence App. Sig. Proc.}}
 
+@string{ieeespl = {IEEE Signal Process. Letters}}
+
 @string{ieeetcom = {IEEE Trans. Commun.}}
 
 @string{ieeetit = {IEEE Trans. Inform. Theory}}
@@ -11,6 +13,20 @@
 @string{ieeetsp = {IEEE Trans. Sig. Process.}}
 
 @string{procicassp = {Proc. Internat. Conf. Acoust. Spe. Sig. Process.}}
+
+@article{McKilliam_fast_sparse_period_est_2014,
+  author = {McKilliam, R.G. and Clarkson, I. V.L. and Quinn, B.G.},
+  journal = ieeespl,
+  title = {Fast Sparse Period Estimation},
+  year = 2015,
+  month = {Jan.},
+  volume = 22,
+  number = 1,
+  pages = {62-66},
+  keywords = {Chirp;Estimation;Fast Fourier transforms;Least squares approximations;Noise measurement;Quantization (signal);Fast Fourier Transform;period estimation},
+  doi = {10.1109/LSP.2014.2345737},
+  issn = {1070-9908}
+}
 
 @inproceedings{Haley_sdr_asrp_winncomm,
   author = {David Haley and Linda M. Davis and Andre Pollok and Ying Chen and Gottfried Lechner and Marc Lavenant and S. Adrian Barbulescu and John Buetefuer and William G. Cowley and Alex Grant and Terry Kemp and Ingmar Land and Rick Luppino and Robby McKilliam and Hidayat Soetiyono},
@@ -57,6 +73,27 @@
   doi = {10.1109/AusCTW.2013.6510040}
 }
 
+@misc{asrp_multiacess_world_patent,
+  author = {A. Grant and D. Haley and R. G. McKilliam and W. G. Cowley and T. Chan},
+  title = {Multi-Access Communication System},
+  howpublished = {World patent WO2013AU01079},
+  year = 2013
+}
+
+@misc{asrp_comm_sys_and_method_world_patent,
+  author = {D. Haley and J. Buetefuer and A. Grant and W. Cowley and G. Lechner and I. R. Land and R. G. McKilliam and A. Pollok and L. M. Davis and R. R. Luppino and A. Barbulescu},
+  title = {Communication System and Method},
+  howpublished = {World patent WO2013AU01078},
+  year = 2013
+}
+
+@misc{asrp_channel_allocation_world_patent,
+  author = {A. Grant and D. Haley and D. Lawrie and R. G. McKilliam and W. Cowley and L. M. Davis},
+  title = {Multi-Access Communication System},
+  howpublished = {World patent WO2013AU00895},
+  year = 2013
+}
+
 @misc{McKilliam_asrp_phase_2012,
   author = {A. Grant and B. Cowley and D. Haley and A. Barbulescu and G. Lechner and I. Land and R. G. McKilliam and A. Pollok and L. Davis},
   title = {Communication system and method},
@@ -73,8 +110,9 @@
 
 @unpublished{McKilliam_closest_point_lattice_first_kind_2014,
   author = {R. G. McKilliam and A. Grant and I. V. L. Clarkson},
-  note = {under review {SIAM J. Discrete Math.}},
+  note = {accepted to {SIAM J. Discrete Math.}},
   title = {Finding a closest point in a lattice of {Voronoi's} first kind},
+  month = {Jul.},
   year = 2014
 }
 
