--- a/bib.bib
+++ b/bib.bib
@@ -4948,12 +4948,15 @@ keywords={Noncoherent detection;asymptotic statistics;phase shift keying},
 doi={10.1109/ICASSP.2013.6638590}, 
 ISSN={1520-6149},}
 
-@unpublished{Quinn_multiple_sparse_noisy_SSP_2014, 
+@INPROCEEDINGS{Quinn_multiple_sparse_noisy_SSP_2014, 
 author={B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam}, 
-note={accepted to {IEEE} Statistical Signal Processing Workshop {(SSP)}}, 
+booktitle={{IEEE} Statistical Signal Processing Workshop}, 
 title={On the periodogram estimators of periods from interleaved sparse, noisy timing data}, 
 year=2014, 
-month={Jul.} 
+month={Jul.},
+pages={232-235},
+doi={10.1109/SSP.2014.6884618},
+address={Gold Coast, Australia}
 }
 
 @INPROCEEDINGS{Quinn_sparse_noisy_SSP_2012, 
@@ -5874,11 +5877,9 @@ ISSN={1930-529X}
 @BOOK{Quinn2001,
   title = {The Estimation and Tracking of Frequency},
   publisher = {Cambridge University Press},
-  year = {2001},
+  year = 2001,
   author = {B. G. Quinn and E. J. Hannan},
-  address = {New York},
-  owner = {robertm},
-  timestamp = {2007.07.16}
+  address = {New York}
 }
 
 @article{quinn1999fast_inter_gen,
