--- a/robby.bib
+++ b/robby.bib
@@ -184,12 +184,15 @@
   issn = {1520-6149}
 }
 
-@unpublished{Quinn_multiple_sparse_noisy_SSP_2014,
+@inproceedings{Quinn_multiple_sparse_noisy_SSP_2014,
   author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
-  note = {accepted to {IEEE} Statistical Signal Processing Workshop {(SSP)}},
+  booktitle = {{IEEE} Statistical Signal Processing Workshop},
   title = {On the periodogram estimators of periods from interleaved sparse, noisy timing data},
   year = 2014,
-  month = {Jul.}
+  month = {Jul.},
+  pages = {232-235},
+  doi = {10.1109/SSP.2014.6884618},
+  address = {Gold Coast, Australia}
 }
 
 @inproceedings{Quinn_sparse_noisy_SSP_2012,
