added details for first kind paper

--- a/bib.bib
+++ b/bib.bib
@@ -1042,12 +1042,15 @@ keywords={Gaussian channel;capacity;finite number of input levels;channel capaci
 doi={10.1109/18.59937}, 
 ISSN={0018-9448},}
 
-@unpublished{McKilliam_closest_point_lattice_first_kind_2014, 
-author={R. G. McKilliam and A. Grant and I. V. L. Clarkson}, 
-note={accepted to {SIAM J. Discrete Math.}}, 
-title={Finding a closest point in a lattice of {Voronoi's} first kind}, 
-month={Jul.},
-year=2014,  
+@article{McKilliam_closest_point_lattice_first_kind_2014,
+author = {McKilliam, R. and Grant, A. and Clarkson, I.},
+title = {Finding a Closest Point in a Lattice of {Voronoi's} First Kind},
+journal = {{SIAM} Journal on Discrete Mathematics},
+volume = 28,
+number = 3,
+pages = {1405-1422},
+year = 2014,
+doi = {10.1137/140952806}
 }
 
 @inproceedings{Micciancio_geom_lat_crypto_2012,
