--- a/robby.bib
+++ b/robby.bib
@@ -108,12 +108,15 @@
   year = 2013
 }
 
-@unpublished{McKilliam_closest_point_lattice_first_kind_2014,
-  author = {R. G. McKilliam and A. Grant and I. V. L. Clarkson},
-  note = {accepted to {SIAM J. Discrete Math.}},
-  title = {Finding a closest point in a lattice of {Voronoi's} first kind},
-  month = {Jul.},
-  year = 2014
+@article{McKilliam_closest_point_lattice_first_kind_2014,
+  author = {McKilliam, R. and Grant, A. and Clarkson, I.},
+  title = {Finding a Closest Point in a Lattice of {Voronoi's} First Kind},
+  journal = {{SIAM} Journal on Discrete Mathematics},
+  volume = 28,
+  number = 3,
+  pages = {1405-1422},
+  year = 2014,
+  doi = {10.1137/140952806}
 }
 
 @unpublished{Pollok_McKilliam_crb_cpm_2014,
