--- a/bib.bib
+++ b/bib.bib
@@ -301,8 +301,22 @@ keywords={estimation theory;least squares approximations;signal processing;Latti
 doi={10.1049/el.2013.1209}, 
 ISSN={0013-5194},}
 
+@article{Edwards_sums_of_powers_doesnt_look_that_quick_1986,
+     title = {A Quick Route to Sums of Powers},
+     author = {Edwards, A. W. F.},
+     journal = {The American Mathematical Monthly},
+     volume = 93,
+     number = 6,
+ month={Jun.},
+    pages = {451-455},
+     ISSN = 00029890,
+     language = {English},
+     year = 1986,
+     publisher = {Mathematical Association of America},
+    }
+
 @ARTICLE{Li_distance_est_wrapped_phase,
-author={Wenchao Li and Xuezhi Wang and Xinmin Wang and Moran, B.},
+author={W. Li and X. Wang and X. Wang and B. Moran},
 journal=ieeetsp,
 title={Distance Estimation Using Wrapped Phase Measurements in Noise},
 year=2013,
@@ -322,6 +336,12 @@ ISSN={1053-587X},}
   note = {\url{http://www.unisa.edu.au/Media-Centre/Releases/Australian-innovators-take-home-international--technology-award/#.U2SGCnWSya6}}
 }
 
+@book{conway_guy_book_of_numbers_1996,
+author={J. H. Conway and R. Guy},
+year=1996,
+title= {The Book of Numbers},
+publisher={Springer}
+}
 
 @incollection{book_sphere_free_number_theory_1990,
 year=1990,
@@ -344,6 +364,18 @@ publisher=cup,
 year=1995
 }
 
+@INPROCEEDINGS{Baro_list_sphere_dec_2003, 
+author={S. Baro and J. Hagenauer and M. Witzke}, 
+booktitle={IEEE International Conference on Communications, 2003. ICC '03}, 
+title={Iterative detection of {MIMO} transmission using a list-sequential {(LISS)} detector}, 
+year=2003, 
+month={May}, 
+volume=4, 
+pages={2653-2657}, 
+keywords={Detectors;Error correction codes;Iterative decoding;Iterative methods;MIMO;Maximum likelihood decoding;Maximum likelihood detection;Maximum likelihood estimation;Receiving antennas;Transmitting antennas; MIMO systems; antenna arrays; iterative methods; receivers; signal detection; MIMO detection; a-posteriori capabilities; iterative detection; list sphere decoder; list-sequential detector; sequential decoding; tree search;}, 
+doi={10.1109/ICC.2003.1204433},}
+
+
 @article{Lagarias_repetetive_delone_sets,
 author={J. C. Lagarias, P. A. B. Pleasants},
 title={Repetitive {Delone} Sets and Quasicrystals},
@@ -362,6 +394,19 @@ volume=32,
 pages={27-45}
 }
 
+@ARTICLE{Mondal_Kbest_again_2009, 
+author={S. Mondal and A. M. Eltawil and K. N. Salama}, 
+journal=ieeetvt, 
+title={Architectural Optimizations for Low-Power $K$-Best {MIMO} Decoders}, 
+year=2009, 
+month={Sep.}, 
+volume=58, 
+number=7, 
+pages={3145-3153}, 
+keywords={MIMO communication;communication complexity;maximum likelihood decoding;maximum likelihood detection;quadrature amplitude modulation;64-QAM MIMO detector system;MIMO detection;architectural optimizations;computational complexity;low-power K-best MIMO decoders;low-power path metric computation unit;maximum-likelihood detection;mobile battery-operated devices;order-of-magnitude reduction;quadratic-amplitude modulation constellation structure;very-large-scale integration design;$K$-best decoders;low power;multiple-input #x2013;multiple-output (MIMO);sphere decoders;wireless;}, 
+doi={10.1109/TVT.2009.2017548}, 
+ISSN={0018-9545}}
+
 @article{Baake20003,
 title = "Diffraction from visible lattice points and kth power free integers ",
 journal = "Discrete Mathematics ",
@@ -373,6 +418,16 @@ issn = "0012-365X",
 doi = "http://dx.doi.org/10.1016/S0012-365X(99)00384-2",
 url = "http://www.sciencedirect.com/science/article/pii/S0012365X99003842",
 author = "M. Baake and R. V. Moody and P. A.B. Pleasants"
+}
+
+
+@INPROCEEDINGS{Haley_gns_4spaper2014,
+author={D. Haley and A. Grant and W. Cowley and L. Davis and I. Land and M. Lavenant and G. Lechner and R. McKilliam and A. Pollok},
+title={Enabling Technologies for a Microsatellite-Based Global Sensor Network},
+booktitle={Small Satellites Systems and Services Symposium}, 
+month={May}, 
+year=2014,
+address={Majorca, Spain}
 }
 
 @ARTICLE{McKilliam_fast_sparse_period_est_2014, 
@@ -737,7 +792,7 @@ ISSN={1053-587X},}
 
 @article{Kodithuwakku_tcomms_2014, 
 author={J. Kodithuwakku and N. Letzepis and R. G. McKilliam and A. Grant}, 
-journal=ieeetom,
+journal=ieeetcom,
 title={Decoder-Assisted Timing Synchronization in Multiuser {CDMA} Systems},
 volume=62,
 number=5,
@@ -999,6 +1054,15 @@ year={2000}
 	closest point search algorithm, kissing number, lattice decoding,
 	lattice generator matrix, lattices, shortest vector},
   file = {Agrell_Lattices_nearest_point_searches.pdf}
+}
+
+@article{schnorr_euchner_sd_1994,
+author={C. P. Schnorr and M. Euchner},
+title={Lattice basis reduction: Improved practical algorithms and solving subset sum problems},
+journal={Math. Programming},
+volume=66,
+pages={181-191},
+year=1994
 }
 
 @ARTICLE{AjtaiShortestVecProbNPHard1998,
@@ -1595,6 +1659,16 @@ author={R. von Mises},
  location = {Coex, Seoul, Korea},
  pages = {2033-2037}
 } 
+
+@article{Pollard2006548,
+title = "Nonlinear least-squares estimation ",
+journal = "Journal of Multivariate Analysis ",
+volume = 97,
+number = 2,
+pages = "548 - 562",
+year = 2006,
+author = "D. Pollard and P. Radchenko"
+}
 
 @article{Pollard_new_ways_clts_1986,
 title={New Ways to Prove Central Limit Theorems},
@@ -2777,6 +2851,24 @@ keywords={Hankel matrices;equalisers;identification;least squares approximations
 doi={10.1109/78.476442}, 
 ISSN={1053-587X}}
 
+@book{huber_robust_statistics,
+author = "P. J. Huber",
+title={Robust statistics},
+publisher={Wiley},
+address={New York},
+year=1981
+}
+
+@inproceeding{huber1967,
+address = "Berkeley, Calif.",
+author = "P. J. Huber",
+booktitle = "Proceedings of the Fifth Berkeley Symposium on Mathematical Statistics and Probability, Volume 1: Statistics",
+pages = "221-233",
+publisher = "University of California Press",
+title = "The behavior of maximum likelihood estimates under nonstandard conditions",
+year = "1967"
+}
+
 @ARTICLE{6111319, 
 author={M. Rupp}, 
 journal=ieeetsp, 
@@ -3318,6 +3410,15 @@ year=2011
   month = {June},
   owner = {Robby},
   timestamp = {2008.02.18}
+}
+
+@article{ErdosSzekeres_pure_poduct_pte,
+author={Erd\^{o}s, P. and Szekeres, G.},
+title={On the Product $\prod_{k=1}^n (1 - z^{\alpha_k})$},
+journal={Acad. Serbe Sci., Publ. Inst. Math.}, 
+number=12,
+year=1958, 
+pages={29-34}
 }
 
 @INCOLLECTION{Erdos_Lattice_points_1989,
@@ -5015,7 +5116,7 @@ ISSN={2157-8095},}
 @ARTICLE{McKilliam_error_prob_An2012, 
 author={R. G. McKilliam and R. Subramanian and E. Viterbo and I. V. L. Clarkson}, 
 journal=ieeetit, 
-title={On the Error Performance of the $A_{n}$ Lattices}, 
+title={On the Error Performance of the {$A_{n}$} Lattices}, 
 year=2012, 
 month={Sep.}, 
 volume=58, 
@@ -5660,6 +5761,15 @@ abstract={We describe some improvements to a proposed algorithm which encodes th
 keywords={computational complexity, data compression, quantisation (signal), teleconferencing, video codecs, video coding24-dimensional Leech lattice, 8-dimensional E8 lattice, computational complexity reduction, extended Hamming code, lattice quantization algorithms, motion compensation, receiver, storage requirements reduction, video compression coding, videoconferencing codec},
 doi={10.1109/76.981845},
 ISSN={1051-8215}
+}
+
+@article{Pohst_modified_LLL_reduced_rank_1987,
+author={M. Pohst},
+title={A modification of the {LLL} reduction algorithm},
+journal={J. Symbolic Computation},
+year=1987, 
+number=4, 
+pages={123-127}
 }
 
 @article{Pohst_sphere_decoder_1981,
