--- a/robby.bib
+++ b/robby.bib
@@ -14,6 +14,15 @@
 
 @string{procicassp = {Proc. Internat. Conf. Acoust. Spe. Sig. Process.}}
 
+@inproceedings{Haley_gns_4spaper2014,
+  author = {D. Haley and A. Grant and W. Cowley and L. Davis and I. Land and M. Lavenant and G. Lechner and R. McKilliam and A. Pollok},
+  title = {Enabling Technologies for a Microsatellite-Based Global Sensor Network},
+  booktitle = {Small Satellites Systems and Services Symposium},
+  month = {May},
+  year = 2014,
+  address = {Majorca, Spain}
+}
+
 @article{McKilliam_fast_sparse_period_est_2014,
   author = {McKilliam, R.G. and Clarkson, I. V.L. and Quinn, B.G.},
   journal = ieeespl,
@@ -37,7 +46,7 @@
 
 @article{Kodithuwakku_tcomms_2014,
   author = {J. Kodithuwakku and N. Letzepis and R. G. McKilliam and A. Grant},
-  journal = ieeetom,
+  journal = ieeetcom,
   title = {Decoder-Assisted Timing Synchronization in Multiuser {CDMA} Systems},
   volume = 62,
   number = 5,
@@ -223,7 +232,7 @@
 @article{McKilliam_error_prob_An2012,
   author = {R. G. McKilliam and R. Subramanian and E. Viterbo and I. V. L. Clarkson},
   journal = ieeetit,
-  title = {On the Error Performance of the $A_{n}$ Lattices},
+  title = {On the Error Performance of the {$A_{n}$} Lattices},
   year = 2012,
   month = {Sep.},
   volume = 58,
